[tool.poetry]
name = "django_vue"
version = "0.1.0"
description = ""
authors = ["tsukachu <concon.ch.1543@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.4"
django-webpack-loader = "^1.1.0"
psycopg2 = "^2.9.1"
gunicorn = "^20.1.0"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
